--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18",
+    "recharts": "^2.12.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
